--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 
     <title>Austral Power SpA</title>
-    <base href="/">
+    <!-- <base href="/"> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
